--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+:root {
+    --color-darkblue-1: #212529;
+    --color-yellow-1: #ffd333;
+    --color-green-1: #47ad24;
+    --color-red-1: #e52e2e;
+    --color-gray-1: #828599;
+    --color-darkblue-2: #3d464d;
+    --color-silver-1: #c3d4da;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.quill {
+    background: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-control {
+    box-shadow: none;
+    border-color: var(--color-silver-1)
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title {
+    font-size: 28px;
+    font-family: Roboto !important;
 }
 
-.App-link {
-  color: #61dafb;
+.sub-title {
+    font-size: 24px;
+    font-family: Roboto !important;
+    color: vr(--color-darkblue-1)
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.desc {
+    font-size: 14px;
+    font-family: Roboto !important;
+    color: var(--color-gray-1)
+}
+
+.formik-error {
+    color: red;
+    margin-bottom: 5px;
+    margin-top: -10px;
+    font-size: 12px;
 }
